# Helixon

./: .gitignore  readme.md  spiral-cad-sketch.par
algo-impl/: eval_positions.ipynb  eval_rotations.ipynb  gen_synth.py  metrics.py  ml_testing.ipynb  ndi.ipynb  paper_diagrams_and_data.ipynb  wifi_rf.py
algo-impl/data/: NormalUDP1.h5  NormalUDP2.h5  RandomUDP10.h5  RandomUDP2.h5  RandomUDP3.h5  RandomUDP4.h5  RandomUDP5.h5  RandomUDP6.h5  RandomUDP7.h5
algo-impl/filters/: HelixonKalmanFilter.py
algo-tests/: Normalize_Data.py  eval_positions.ipynb  eval_rotations.ipynb  eval_rotations.py  gen_synth.py  kalman.py  kalman_height.py  kalman_wifi.py  kalman_xyzrpy.py  metrics.py  ndi.py  ndi_real.py  spiral_model.py  synth_router.py  train_wifi_rf.py  tune_alpha.py  wifi_random_forest.py  wifi_random_forest_regressor.py  wifi_rf.py
algo-tests/data/: NormalUDP2.h5  (+8 more)
data/: synthetic.h5
data-preproc/: align_data.py  hdf5_formatter.py  hdf5_io.py  label_and_store.py  led_detector.py
data-preproc/hlxon_hdf5io/: .gitignore  __init__.py  hlxon_hdf5io.py  pyproject.toml
data-preproc/hlxon_hdf5io/hlxon_hdf5io.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
data-viz/: animation.blend  animation.blend1  exploration_data.ipynb  final1.blend  final1.blend1  quaternion_functions.py  read_file.py  spiral_scipt.blend  spiral_scipt.blend1  spiral_scipt_try1.blend  spiral_scipt_try1.blend1  try1_wth_matplotlib.py  try2_socket.ipynb  try_sockets.ipynb  write_blender_socket.py  write_file.py
report_final/: bibliography.bib  fiiw.sty  paper.aux  paper.blg  paper.ptc  paper.tex
(+878 files in other folders)
