[project]
name = "hlxon_hdf5io"
version = "0.0.1"
authors = [
  { name="Yusuf Hussein", email="yusuf.hussein@student.kuleuven.be" },
  { name="Giulio Vitolo", email="giulio.vitolo@student.kuleuven.be" },
  { name="Mateo Libanon", email="mateo.sakr@student.kuleuven.be" },
]
description = "Helixon HDF5 write and read lib"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
